Have fixed rate text alignment Pushed the reviews to the top of the rate form

--- a/src/main/webapp/assets/css/blocks.css
+++ b/src/main/webapp/assets/css/blocks.css
@@ -3412,7 +3412,7 @@
 }
 
 .news-v3 .post-shares li i:hover {
-  background: #ddd;
+ /* background: #ddd;*/
 }
 
 .news-v3 .post-shares li span {
